--- a/SBM/Web.config
+++ b/SBM/Web.config
@@ -20,4 +20,12 @@
     </compilers>
   </system.codedom>
 
+  <connectionStrings>
+    <add name="Dbconnections" connectionString="data source=89.221.254.34;initial catalog=MSSQL400035;persist security info=True;user id=MSSQL400035;password=MTowMTo1MQ;MultipleActiveResultSets=True;App=EntityFramework" />
+  </connectionStrings>
+
+   <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
+
 </configuration>
