--- a/SBM/SBM.csproj
+++ b/SBM/SBM.csproj
@@ -106,6 +106,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ad5ra.css" />
     <Content Include="Boka.aspx" />
     <Content Include="Bokningar.aspx" />
     <Content Include="Bootstrap.js" />
@@ -145,6 +146,7 @@
     <Content Include="Styler.css" />
     <Content Include="sweetalert2.all.min.js" />
     <Content Include="sweetalert2.css" />
+    <Content Include="try.aspx" />
     <Content Include="ud-logo.svg" />
     <Content Include="vimpsedon.js" />
     <Content Include="Web.config" />
@@ -215,6 +217,13 @@
       <DependentUpon>Policy.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="try.aspx.cs">
+      <DependentUpon>try.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="try.aspx.designer.cs">
+      <DependentUpon>try.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Admin.Master" />
